--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>ペンぐぃんのホームページ</title>
+<meta name="google-site-verification" content="4qJ3f0-rMSiJRVatM7xcOzKw7aH6QIjXrPRk1b2aehM" />
 <link rel="stylesheet" href="index.css" >
 </head>
 <body class="body">
