--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head lang="ja-jp">
 <title>ペンぐぃんのホームページ</title>
-<meta name="google-site-verification" content="4qJ3f0-rMSiJRVatM7xcOzKw7aH6QIjXrPRk1b2aehM" />
+	<link rel="shortcut icon" href="ペンぐぃん(アイコン).png" type="" />
+	<meta name="author" content="ぺんぐぃん">
+	<meta name="google-site-verification" content="4qJ3f0-rMSiJRVatM7xcOzKw7aH6QIjXrPRk1b2aehM" />
+	<meta name="description" content="1年次ぺんぐぃんのホームページです">
+	<meta name="keywords" content="ぺんぐぃん,ホームページ,">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="index.css" >
 </head>
 <body class="body">
