--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head lang="ja-jp">
+<head>
 <title>ペンぐぃんのホームページ</title>
-	<meta charset="utf-8">
-	<link rel="shortcut icon" href="ペンぐぃん(アイコン).png" type="" />
-	<meta name="author" content="ぺんぐぃん">
-	<meta property="og:title" content="">
-	<meta name="google-site-verification" content="4qJ3f0-rMSiJRVatM7xcOzKw7aH6QIjXrPRk1b2aehM" />
-	<meta name="description" content="1年次ぺんぐぃんのホームページです">
-	<meta name="keywords" content="ぺんぐぃん,ホームページ,">
 <link rel="stylesheet" href="index.css" >
 </head>
 <body class="body">
