--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 <head>
 <title>ペンぐぃんのホームページ</title>
 <link rel="stylesheet" href="index.css" >
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="ペンぐぃんのホームページ。3DCGモデリングや動画編集、立ち絵制作などを行うエレ部1年次の活動紹介サイトです。">
+  <meta name="author" content="ペンぐぃん">
+  <meta name="keywords" content="ペンぐぃん, 3DCG, 動画編集, 立ち絵, エレ部, 自己紹介">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="ペンぐぃんのホームページ">
+  <meta property="og:description" content="ペンぐぃんのホームページ。3DCGモデリングや動画編集、立ち絵制作などを行うエレ部1年次の活動紹介サイトです。">
+  <meta property="og:image" content="https://penguin0702yu.github.io/penguin0702homepage.github.io/logo.png">
+  <meta property="og:url" content="https://penguin0702yu.github.io/penguin0702homepage.github.io/">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="ペンぐぃんのホームページ">
+  <meta name="twitter:description" content="ペンぐぃんのホームページ。3DCGモデリングや動画編集、立ち絵制作などを行うエレ部1年次の活動紹介サイトです。">
+  <meta name="twitter:image" content="https://penguin0702yu.github.io/penguin0702homepage.github.io/logo.png">
 </head>
 <body class="body">
 <ul class="navi-top">
